--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,11 @@
     "keywords": ["library"],
     "require": {
         "php": ">=5.3.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Test\\": "tests/",
+            "SimpleValidator\\": "lib/SimpleValidator/"
+        }
     }
 }
